--- a/src/app.css
+++ b/src/app.css
@@ -1,1 +1,21 @@
-@import "tailwindcss";
+@import 'tailwindcss';
+
+.button-rounded-small, .button-rounded {
+	@apply items-center justify-center rounded-full;
+}
+
+.button-rounded-small {
+	@apply px-4 py-2;
+}
+
+.button-rounded {
+	@apply px-6 py-3 gap-2;
+}
+
+.gradient-vertical {
+	@apply bg-gradient-to-r from-pink-500/10 to-yellow-500/10;
+}
+
+.gradient-horizontal {
+	@apply bg-gradient-to-t from-pink-500 via-red-400 to-yellow-500;
+}
