--- a/src/app.css
+++ b/src/app.css
@@ -1,4 +1,9 @@
 @import 'tailwindcss';
+@import url('https://fonts.googleapis.com/css2?family=Fira+Code:wght@300..700&display=swap');
+
+* {
+  font-family: "Fira Code", monospace;
+}
 
 .button-rounded-small, .button-rounded {
 	@apply items-center justify-center rounded-full;
@@ -16,6 +21,14 @@
 	@apply bg-gradient-to-r from-pink-500/10 to-yellow-500/10;
 }
 
-.gradient-horizontal {
+.gradient-horizontal, .gradient-text {
 	@apply bg-gradient-to-t from-pink-500 via-red-400 to-yellow-500;
+}
+
+.gradient-text {
+  @apply text-transparent bg-clip-text;
+}
+
+.home-page-section{
+  @apply h-full w-full md:px-8 xl:px-20 text-white bg-black flex items-center p-6;
 }
