--- a/src/app.css
+++ b/src/app.css
@@ -2,10 +2,11 @@
 @import url('https://fonts.googleapis.com/css2?family=Fira+Code:wght@300..700&display=swap');
 
 * {
-  font-family: "Fira Code", monospace;
+	font-family: 'Fira Code', monospace;
 }
 
-.button-rounded-small, .button-rounded {
+.button-rounded-small,
+.button-rounded {
 	@apply items-center justify-center rounded-full;
 }
 
@@ -21,14 +22,19 @@
 	@apply bg-gradient-to-r from-pink-500/10 to-yellow-500/10;
 }
 
-.gradient-horizontal, .gradient-text {
+.gradient-horizontal,
+.gradient-text {
 	@apply bg-gradient-to-t from-pink-500 via-red-400 to-yellow-500;
 }
 
 .gradient-text {
-  @apply text-transparent bg-clip-text;
+	@apply text-transparent bg-clip-text;
 }
 
-.home-page-section{
-  @apply h-full w-full md:px-8 xl:px-20 text-white bg-black flex items-center p-6;
+.home-page-section {
+	@apply h-full w-full md:px-8 xl:px-20 text-white bg-black flex items-center p-6;
+}
+
+.title-size {
+	@apply xl:text-6xl lg:text-5xl md:text-4xl text-3xl font-semibold leading-tight;
 }
