--- a/src/app.css
+++ b/src/app.css
@@ -19,12 +19,12 @@
 }
 
 .gradient-vertical {
-	@apply bg-gradient-to-r from-pink-500/10 to-yellow-500/10;
+	@apply bg-gradient-to-r from-pink-500/50 to-indigo-500/50;
 }
 
 .gradient-horizontal,
 .gradient-text {
-	@apply bg-gradient-to-t from-pink-500 via-red-400 to-yellow-500;
+	@apply bg-gradient-to-t from-pink-500 via-violet-400 to-indigo-500;
 }
 
 .gradient-text {
