--- a/src/app.css
+++ b/src/app.css
@@ -1,8 +1,64 @@
-@import url('https://fonts.googleapis.com/css2?family=Fira+Code:wght@300..700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Exo+2:ital,wght@0,100..900;1,100..900&family=Playfair+Display:ital,wght@0,400..900;1,400..900&family=Quicksand:wght@300..700&family=Share+Tech+Mono&display=swap');
 @import 'tailwindcss';
 
-* {
-  font-family: 'Fira Code', monospace;
+@theme static{
+  --color-bg-dark: #0b0f16;
+  --color-accent-dark: #ff2e88;
+  --color-secondary-dark: #6a00f4;
+  --color-contrast-dark: #ffe600;
+  --color-text-primary-dark: #e1e1e1;
+  --color-text-highlight-dark: #ff76ff;
+
+  --font-title-dark: 'Share Tech Mono', monospace;
+  --font-text-dark: 'Exo 2', sans-serif;
+
+  --color-bg-ligth: #fff5fb;
+  --color-accent-light: #f94f96;
+  --color-secondary-light: #A66CF;
+  --color-contrast-light: #ffd943;
+  --color-text-primary-light: #2b2b2b;
+  --color-text-highlight-light: #ffeef4;
+
+  --font-title-light: 'Playfair Display', serif;
+  --font-text-light: 'Quicksand', sans-serif;
+}
+
+@layer base {
+  * {
+    @apply text-text-primary-dark
+  }
+
+  h1,
+  h2,
+  h3,
+  h4,
+  h5 {
+    @apply font-title-dark text-text-primary-dark;
+  }
+
+  h1 {
+    @apply xl:text-6xl lg:text-5xl md:text-4xl text-3xl font-semibold leading-tight;
+  }
+
+  h2 {
+    @apply xl:text-5xl lg:text-4xl md:text-3xl text-2xl font-semibold leading-tight;
+  }
+
+  h3 {
+    @apply xl:text-4xl lg:text-3xl md:text-2xl text-xl font-bold leading-tight;
+  }
+
+  h4 {
+    @apply xl:text-3xl lg:text-2xl md:text-xl text-lg font-bold leading-tight;
+  }
+
+  h5 {
+    @apply xl:text-3xl lg:text-2xl md:text-xl text-lg font-normal leading-tight;
+  }
+
+  p {
+    @apply font-text-dark text-text-primary-dark text-base/6 subpixel-antialiased tracking-normal text-left;
+  }
 }
 
 .button-rounded-small,
@@ -19,12 +75,15 @@
 }
 
 .gradient-vertical {
-  @apply bg-gradient-to-r from-pink-500/50 to-indigo-500/50;
+  @apply bg-gradient-to-r from-accent-dark to-secondary-dark;
 }
 
+.gradient-vertical-dim {
+  @apply bg-gradient-to-r from-accent-dark/50 to-secondary-dark/50;
+}
 .gradient-horizontal,
 .gradient-text {
-  @apply bg-gradient-to-t from-pink-500 via-violet-400 to-indigo-500;
+  @apply bg-gradient-to-t from-accent-dark to-secondary-dark;
 }
 
 .gradient-text {
@@ -32,13 +91,33 @@
 }
 
 .home-page-section {
-  @apply h-full w-full md:px-8 xl:px-20 text-white bg-black flex items-center p-6;
+  @apply h-full w-full md:px-8 xl:px-20 bg-bg-dark flex items-center p-6;
 }
 
-.title-size {
-  @apply xl:text-6xl lg:text-5xl md:text-4xl text-3xl font-semibold leading-tight;
+.prose :is(*) {
+  @apply m-2 text-wrap  break-normal hyphens-auto bg-bg-dark;
 }
 
-.prose :is(h1,h2,h3,h4,h5,h6) {
-  @apply bg-amber-950;
+.prose :is(ul) {
+  @apply list-inside list-disc;
+}
+
+.prose :is(ol) {
+  @apply list-inside list-decimal;
+}
+
+.prose :is(li) {
+  @apply m-0;
+}
+
+.prose :is(a) {
+  @apply after:content-['_↗'] text-text-highlight-dark font-semibold no-underline hover:underline decoration-text-highlight-dark decoration-2;
+}
+
+.prose :is(table) {
+  @apply table-auto border-collapse border border-gray-400  border-spacing-2;
+}
+
+.prose :is(th, td) {
+  @apply border border-gray-400 p-1 ml-2 mr-2;
 }
