--- a/src/app.css
+++ b/src/app.css
@@ -14,7 +14,7 @@
 
   --color-bg-ligth: #fff5fb;
   --color-accent-light: #f94f96;
-  --color-secondary-light: #A66CF;
+  --color-secondary-light: #A66CF4;
   --color-contrast-light: #ffd943;
   --color-text-primary-light: #2b2b2b;
   --color-text-highlight-light: #ffeef4;
