--- a/src/app.css
+++ b/src/app.css
@@ -14,7 +14,7 @@
 
   --color-bg-ligth: #fff5fb;
   --color-accent-light: #f94f96;
-  --color-secondary-light: #A66CF4;
+  --color-secondary-light: #a66cf4;
   --color-contrast-light: #ffd943;
   --color-text-primary-light: #2b2b2b;
   --color-text-highlight-light: #ffeef4;
@@ -92,6 +92,10 @@
 
 .gradient-text {
   @apply text-transparent bg-clip-text;
+}
+
+.highlight-text {
+  @apply underline decoration-text-highlight-dark text-text-highlight-dark font-bold;
 }
 
 .prose :is(*) {
